adding logger for each methods in controllers

--- a/Poseiden-skeleton/pom.xml
+++ b/Poseiden-skeleton/pom.xml
@@ -135,7 +135,7 @@
 							<archive>
 								<manifest>
 									<mainClass>
-										com.gino.paymybuddy.PaymybuddyApplication
+										com.nnk.springboot.Application
 									</mainClass>
 								</manifest>
 							</archive>
